--- a/style.css
+++ b/style.css
@@ -4,4 +4,32 @@
 
 body {
     margin: 0;
+    font-family: 'Inter', sans-serif;
+}
+
+nav {
+    display: flex;
+    background-color: #21222A;
+    align-items: center;
+    padding: 30px 25px;
+    height: 90px;
+}
+
+.nav--logo_text {
+    color: #61DAFB;
+    margin-right: auto;
+    font-size: 39px;
+    font-weight: 600;
+}
+
+.nav--logo {
+    height: 50px;
+    margin-right: 7px;
+}
+
+.nav--title {
+    color: #DEEBF8;
+    font-weight:lighter;
+    font-size: 16px;
+
 }
