--- a/style.css
+++ b/style.css
@@ -38,6 +38,9 @@ nav {
 main {
     padding: 57px 27px;
     color: white;
+    background-image: url(../../images/half_owl.png);
+    background-repeat: no-repeat;
+    background-position: right 75%;
 }
 
 .main--subtitle {
